Next release

  Features

    Optimization: always choose n-best field index sort at very small limit 
    sizes.

    Better tests (no force).

0.5.1 (12/31/2008)

  Features

    Optimize the choice of fieldindex sort strategy.

    Speed up keyword index merges slightly.

    Fix a bug in the return value of the catalog: it would try to
    return the minimum of the number of docs or the limit event
    if there was no limit.

  Bug Fixes

    Sean Upton pointed out that the document map code artificially
    limited the number of documents to half the number that it could
    actually handle.

0.5 (11/10/2008)

  Features

    Add path index.

    Speed up keyword index 'and' (intersection) queries nominally by
    sorting intersected sets from smallest-to-largest first.

    Benchmarking suite provided by Chris Rossi.

    Add a "facet" index
    (``repoze.catalog.indexes.facet.CatalogFacetIndex``).  This index
    is much like a keyword index, but unlike a keyword index it
    contains a facet list (a sequence of known colon-separated values)
    and accepts values that are sequences of colon-separated terms.
    Each term is split on its colons, forming a sequence of
    categories, then each concatenation of the categories is indexed.
    For example, if you indexed a document as
    ``['style:gucci:handbag']``, and the facet list contained
    ``'style'``, ``'style:gucci'`` and ``'style:gucci:handbag'``, the
    document would be indexed three times: as ``style``, as
    ``style:gucci`` and as ``style:gucci:handbag``.  Querying a facet
    index returns a set of document ids that match the facets passed
    in.  A facet index also has a ``counts`` method which provided a
    set of document ids, returns a dictionary containing "further
    constraint information" for use in a narrowing UI.  This count
    implementation is not meant for very large-scale sites; it is
    naive.

0.4 (10/6/2008)

  Features
